adjusted cabstractbase page, added currentItem set and get from vaadin session