@@ -1,12 +1,15 @@
 package tech.derbent.abstracts.annotations;
 
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.BeforeEach;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.Arrays;
 import java.util.List;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
 
 import com.vaadin.flow.component.html.Div;
 import com.vaadin.flow.data.binder.BeanValidationBinder;
@@ -14,10 +17,10 @@ import com.vaadin.flow.data.binder.BeanValidationBinder;
 import tech.derbent.abstracts.domains.CEntityDB;
 
 /**
- * Integration test demonstrating the new annotation-based ComboBox data provider approach.
- * This test shows how the enhanced CEntityFormBuilder can automatically resolve data providers
- * for ComboBox fields using MetaData annotations, making form creation much simpler and more maintainable.
- * 
+ * Integration test demonstrating the new annotation-based ComboBox data provider
+ * approach. This test shows how the enhanced CEntityFormBuilder can automatically resolve
+ * data providers for ComboBox fields using MetaData annotations, making form creation
+ * much simpler and more maintainable.
  * <p>
  * <strong>Key Features Demonstrated:</strong>
  * </p>
@@ -31,355 +34,290 @@ import tech.derbent.abstracts.domains.CEntityDB;
  */
 class CEntityFormBuilderIntegrationTest {
 
-    /**
-     * Example entity demonstrating the new annotation-based approach for multiple ComboBox fields.
-     * This shows how different ComboBox fields can specify their own data providers without
-     * requiring complex logic in the view layer.
-     */
-    public static class ExampleEntity extends CEntityDB {
-        
-        @MetaData(
-            displayName = "Primary Type", 
-            description = "The primary type category",
-            order = 1,
-            required = true,
-            dataProviderBean = "primaryTypeService"
-        )
-        private PrimaryType primaryType;
-        
-        @MetaData(
-            displayName = "Secondary Type", 
-            description = "The secondary type category",
-            order = 2,
-            required = false,
-            dataProviderClass = SecondaryTypeService.class,
-            dataProviderMethod = "findAllActive"
-        )
-        private SecondaryType secondaryType;
-        
-        @MetaData(
-            displayName = "Related Item", 
-            description = "Related item using automatic resolution",
-            order = 3,
-            required = false
-            // No explicit data provider - will use automatic resolution
-        )
-        private RelatedItem relatedItem;
-        
-        @MetaData(
-            displayName = "Entity Name",
-            description = "The name of this entity",
-            order = 0,
-            required = true,
-            maxLength = 100
-        )
-        private String name;
+	/**
+	 * Example entity demonstrating the new annotation-based approach for multiple
+	 * ComboBox fields. This shows how different ComboBox fields can specify their own
+	 * data providers without requiring complex logic in the view layer.
+	 */
+	public static class ExampleEntity extends CEntityDB {
 
-        // Constructors
-        public ExampleEntity() {
-            super();
-        }
+		@MetaData(displayName = "Primary Type", description = "The primary type category",
+			order = 1, required = true, dataProviderBean = "primaryTypeService")
+		private PrimaryType primaryType;
+		@MetaData(displayName = "Secondary Type",
+			description = "The secondary type category", order = 2, required = false,
+			dataProviderClass = SecondaryTypeService.class,
+			dataProviderMethod = "findAllActive")
+		private SecondaryType secondaryType;
+		@MetaData(displayName = "Related Item",
+			description = "Related item using automatic resolution", order = 3,
+			required = false
+		// No explicit data provider - will use automatic resolution
+		)
+		private RelatedItem relatedItem;
+		@MetaData(displayName = "Entity Name", description = "The name of this entity",
+			order = 0, required = true, maxLength = 100)
+		private String name;
 
-        public ExampleEntity(String name) {
-            super();
-            this.name = name;
-        }
+		// Constructors
+		public ExampleEntity() {
+			super();
+		}
 
-        // Getters and setters required for Vaadin binding
-        public PrimaryType getPrimaryType() {
-            return primaryType;
-        }
+		public ExampleEntity(final String name) {
+			super();
+			this.name = name;
+		}
 
-        public void setPrimaryType(PrimaryType primaryType) {
-            this.primaryType = primaryType;
-        }
+		public String getName() { return name; }
 
-        public SecondaryType getSecondaryType() {
-            return secondaryType;
-        }
+		// Getters and setters required for Vaadin binding
+		public PrimaryType getPrimaryType() { return primaryType; }
 
-        public void setSecondaryType(SecondaryType secondaryType) {
-            this.secondaryType = secondaryType;
-        }
+		public RelatedItem getRelatedItem() { return relatedItem; }
 
-        public RelatedItem getRelatedItem() {
-            return relatedItem;
-        }
+		public SecondaryType getSecondaryType() { return secondaryType; }
 
-        public void setRelatedItem(RelatedItem relatedItem) {
-            this.relatedItem = relatedItem;
-        }
+		public void setName(final String name) { this.name = name; }
 
-        public String getName() {
-            return name;
-        }
+		public void setPrimaryType(final PrimaryType primaryType) {
+			this.primaryType = primaryType;
+		}
 
-        public void setName(String name) {
-            this.name = name;
-        }
+		public void setRelatedItem(final RelatedItem relatedItem) {
+			this.relatedItem = relatedItem;
+		}
 
-        @Override
-        public String toString() {
-            return name != null ? name : "ExampleEntity[" + getId() + "]";
-        }
-    }
+		public void setSecondaryType(final SecondaryType secondaryType) {
+			this.secondaryType = secondaryType;
+		}
 
-    /**
-     * Example entity type for ComboBox testing
-     */
-    public static class PrimaryType extends CEntityDB {
-        private String typeName;
+		@Override
+		public String toString() {
+			return name != null ? name : "ExampleEntity[" + getId() + "]";
+		}
+	}
 
-        public PrimaryType() {
-            super();
-        }
+	/**
+	 * Example entity type for ComboBox testing
+	 */
+	public static class PrimaryType extends CEntityDB {
 
-        public PrimaryType(String typeName) {
-            super();
-            this.typeName = typeName;
-        }
+		private String typeName;
 
-        public String getTypeName() {
-            return typeName;
-        }
+		public PrimaryType() {
+			super();
+		}
 
-        public void setTypeName(String typeName) {
-            this.typeName = typeName;
-        }
+		public PrimaryType(final String typeName) {
+			super();
+			this.typeName = typeName;
+		}
 
-        @Override
-        public String toString() {
-            return typeName != null ? typeName : "PrimaryType[" + getId() + "]";
-        }
-    }
+		public String getTypeName() { return typeName; }
 
-    /**
-     * Another example entity type for ComboBox testing
-     */
-    public static class SecondaryType extends CEntityDB {
-        private String category;
+		public void setTypeName(final String typeName) { this.typeName = typeName; }
 
-        public SecondaryType() {
-            super();
-        }
+		@Override
+		public String toString() {
+			return typeName != null ? typeName : "PrimaryType[" + getId() + "]";
+		}
+	}
 
-        public SecondaryType(String category) {
-            super();
-            this.category = category;
-        }
+	/**
+	 * Third example entity type for automatic resolution testing
+	 */
+	public static class RelatedItem extends CEntityDB {
 
-        public String getCategory() {
-            return category;
-        }
+		private String itemName;
 
-        public void setCategory(String category) {
-            this.category = category;
-        }
+		public RelatedItem() {
+			super();
+		}
 
-        @Override
-        public String toString() {
-            return category != null ? category : "SecondaryType[" + getId() + "]";
-        }
-    }
+		public RelatedItem(final String itemName) {
+			super();
+			this.itemName = itemName;
+		}
 
-    /**
-     * Third example entity type for automatic resolution testing
-     */
-    public static class RelatedItem extends CEntityDB {
-        private String itemName;
+		public String getItemName() { return itemName; }
 
-        public RelatedItem() {
-            super();
-        }
+		public void setItemName(final String itemName) { this.itemName = itemName; }
 
-        public RelatedItem(String itemName) {
-            super();
-            this.itemName = itemName;
-        }
+		@Override
+		public String toString() {
+			return itemName != null ? itemName : "RelatedItem[" + getId() + "]";
+		}
+	}
 
-        public String getItemName() {
-            return itemName;
-        }
+	/**
+	 * Another example entity type for ComboBox testing
+	 */
+	public static class SecondaryType extends CEntityDB {
 
-        public void setItemName(String itemName) {
-            this.itemName = itemName;
-        }
+		private String category;
 
-        @Override
-        public String toString() {
-            return itemName != null ? itemName : "RelatedItem[" + getId() + "]";
-        }
-    }
+		public SecondaryType() {
+			super();
+		}
 
-    /**
-     * Mock service for SecondaryType that would be resolved by class
-     */
-    public static class SecondaryTypeService {
-        
-        public List<SecondaryType> findAllActive() {
-            return Arrays.asList(
-                new SecondaryType("Active Category 1"),
-                new SecondaryType("Active Category 2")
-            );
-        }
-        
-        public List<SecondaryType> list() {
-            return Arrays.asList(
-                new SecondaryType("All Category 1"),
-                new SecondaryType("All Category 2")
-            );
-        }
-    }
+		public SecondaryType(final String category) {
+			super();
+			this.category = category;
+		}
 
-    private BeanValidationBinder<ExampleEntity> binder;
+		public String getCategory() { return category; }
 
-    @BeforeEach
-    void setUp() {
-        binder = new BeanValidationBinder<>(ExampleEntity.class);
-    }
+		public void setCategory(final String category) { this.category = category; }
 
-    @Test
-    @DisplayName("should create form with annotation-based ComboBox providers")
-    void testFormWithAnnotationBasedProviders() {
-        // When - Create form using the new annotation-based approach
-        // Note: No explicit ComboBoxDataProvider needed!
-        Div form = CEntityFormBuilder.buildForm(ExampleEntity.class, binder);
+		@Override
+		public String toString() {
+			return category != null ? category : "SecondaryType[" + getId() + "]";
+		}
+	}
 
-        // Then
-        assertNotNull(form, "Form should be created successfully");
-        assertEquals("editor-layout", form.getClassName(), "Form should have correct CSS class");
-        assertTrue(form.getChildren().count() > 0, "Form should contain components");
-        
-        // The form should be created even though the actual Spring services are not available
-        // in this test environment - the form builder handles missing services gracefully
-    }
+	/**
+	 * Mock service for SecondaryType that would be resolved by class
+	 */
+	public static class SecondaryTypeService {
 
-    @Test
-    @DisplayName("should maintain backward compatibility with legacy ComboBoxDataProvider")
-    void testBackwardCompatibilityWithLegacyProvider() {
-        // Given - Create legacy data provider
-        CEntityFormBuilder.ComboBoxDataProvider legacyProvider = new CEntityFormBuilder.ComboBoxDataProvider() {
-            @Override
-            @SuppressWarnings("unchecked")
-            public <T extends CEntityDB> List<T> getItems(Class<T> entityType) {
-                if (entityType == PrimaryType.class) {
-                    return (List<T>) Arrays.asList(
-                        new PrimaryType("Legacy Type 1"),
-                        new PrimaryType("Legacy Type 2")
-                    );
-                } else if (entityType == SecondaryType.class) {
-                    return (List<T>) Arrays.asList(
-                        new SecondaryType("Legacy Secondary 1"),
-                        new SecondaryType("Legacy Secondary 2")
-                    );
-                }
-                return List.of();
-            }
-        };
+		public List<SecondaryType> findAllActive() {
+			return Arrays.asList(new SecondaryType("Active Category 1"),
+				new SecondaryType("Active Category 2"));
+		}
 
-        // When - Create form using legacy approach (should still work)
-        Div form = CEntityFormBuilder.buildForm(ExampleEntity.class, binder, legacyProvider);
+		public List<SecondaryType> list() {
+			return Arrays.asList(new SecondaryType("All Category 1"),
+				new SecondaryType("All Category 2"));
+		}
+	}
 
-        // Then
-        assertNotNull(form, "Form should be created successfully with legacy provider");
-        assertEquals("editor-layout", form.getClassName(), "Form should have correct CSS class");
-        assertTrue(form.getChildren().count() > 0, "Form should contain components");
-    }
+	private BeanValidationBinder<ExampleEntity> binder;
 
-    @Test
-    @DisplayName("should handle entity without ComboBox fields gracefully")
-    void testEntityWithoutComboBoxFields() {
-        // Given - Simple entity without ComboBox fields
-        class SimpleEntity {
-            @MetaData(displayName = "Simple Name", required = true, order = 1)
-            private String name;
-            
-            @MetaData(displayName = "Simple Number", required = false, order = 2)
-            private Integer number;
+	@BeforeEach
+	void setUp() {
+		binder = new BeanValidationBinder<>(ExampleEntity.class);
+	}
 
-            public String getName() {
-                return name;
-            }
+	@Test
+	@DisplayName("should maintain backward compatibility with legacy ComboBoxDataProvider")
+	void testBackwardCompatibilityWithLegacyProvider() {
+		// Given - Create legacy data provider
+		final CEntityFormBuilder.ComboBoxDataProvider legacyProvider =
+			new CEntityFormBuilder.ComboBoxDataProvider() {
 
-            public void setName(String name) {
-                this.name = name;
-            }
+				@Override
+				@SuppressWarnings("unchecked")
+				public <T extends CEntityDB> List<T> getItems(final Class<T> entityType) {
+					if (entityType == PrimaryType.class) {
+						return (List<T>) Arrays.asList(new PrimaryType("Legacy Type 1"),
+							new PrimaryType("Legacy Type 2"));
+					}
+					else if (entityType == SecondaryType.class) {
+						return (List<T>) Arrays.asList(
+							new SecondaryType("Legacy Secondary 1"),
+							new SecondaryType("Legacy Secondary 2"));
+					}
+					return List.of();
+				}
+			};
+		// When - Create form using legacy approach (should still work)
+		final Div form =
+			CEntityFormBuilder.buildForm(ExampleEntity.class, binder, legacyProvider);
+		// Then
+		assertNotNull(form, "Form should be created successfully with legacy provider");
+		assertEquals("editor-layout", form.getClassName(),
+			"Form should have correct CSS class");
+		assertTrue(form.getChildren().count() > 0, "Form should contain components");
+	}
 
-            public Integer getNumber() {
-                return number;
-            }
+	@Test
+	@DisplayName("should handle entity without ComboBox fields gracefully")
+	void testEntityWithoutComboBoxFields() {
+		// Given - Simple entity without ComboBox fields
+		class SimpleEntity {
 
-            public void setNumber(Integer number) {
-                this.number = number;
-            }
-        }
+			@MetaData(displayName = "Simple Name", required = true, order = 1)
+			private String name;
+			@MetaData(displayName = "Simple Number", required = false, order = 2)
+			private Integer number;
 
-        BeanValidationBinder<SimpleEntity> simpleBinder = new BeanValidationBinder<>(SimpleEntity.class);
+			@SuppressWarnings("unused")
+			public String getName() { return name; }
 
-        // When
-        Div form = CEntityFormBuilder.buildForm(SimpleEntity.class, simpleBinder);
+			@SuppressWarnings("unused")
+			public Integer getNumber() { return number; }
 
-        // Then
-        assertNotNull(form, "Form should be created successfully");
-        assertEquals("editor-layout", form.getClassName(), "Form should have correct CSS class");
-        // Form should contain the text field and number field components
-    }
+			@SuppressWarnings("unused")
+			public void setName(final String name) { this.name = name; }
 
-    @Test
-    @DisplayName("should demonstrate the improved developer experience")
-    void testImprovedDeveloperExperience() {
-        /*
-         * This test demonstrates how the new annotation-based approach dramatically
-         * simplifies form creation for developers:
-         * 
-         * OLD APPROACH (complex, error-prone):
-         * ===================================
-         * ComboBoxDataProvider provider = new ComboBoxDataProvider() {
-         *     @Override
-         *     public <T extends CEntityDB> List<T> getItems(Class<T> entityType) {
-         *         if (entityType == PrimaryType.class) {
-         *             return (List<T>) primaryTypeService.list(Pageable.unpaged());
-         *         } else if (entityType == SecondaryType.class) {
-         *             return (List<T>) secondaryTypeService.findAllActive();
-         *         } else if (entityType == RelatedItem.class) {
-         *             return (List<T>) relatedItemService.list();
-         *         }
-         *         // What if we add more ComboBox fields? More if-else blocks!
-         *         // What if we forget to handle a type? Silent bugs!
-         *         return Collections.emptyList();
-         *     }
-         * };
-         * Div form = CEntityFormBuilder.buildForm(ExampleEntity.class, binder, provider);
-         * 
-         * NEW APPROACH (simple, maintainable):
-         * ====================================
-         * // Just annotations in the entity - no complex provider logic needed!
-         * @MetaData(dataProviderBean = "primaryTypeService")
-         * private PrimaryType primaryType;
-         * 
-         * @MetaData(dataProviderClass = SecondaryTypeService.class, dataProviderMethod = "findAllActive")  
-         * private SecondaryType secondaryType;
-         * 
-         * // Automatic resolution - no annotation needed if following naming convention!
-         * private RelatedItem relatedItem;
-         * 
-         * // In the view - super simple!
-         * Div form = CEntityFormBuilder.buildForm(ExampleEntity.class, binder);
-         */
+			@SuppressWarnings("unused")
+			public void setNumber(final Integer number) { this.number = number; }
+		}
+		final BeanValidationBinder<SimpleEntity> simpleBinder =
+			new BeanValidationBinder<>(SimpleEntity.class);
+		// When
+		final Div form = CEntityFormBuilder.buildForm(SimpleEntity.class, simpleBinder);
+		// Then
+		assertNotNull(form, "Form should be created successfully");
+		assertEquals("editor-layout", form.getClassName(),
+			"Form should have correct CSS class");
+		// Form should contain the text field and number field components
+	}
 
-        // When - Using the new simplified approach
-        Div form = CEntityFormBuilder.buildForm(ExampleEntity.class, binder);
+	@Test
+	@DisplayName("should create form with annotation-based ComboBox providers")
+	void testFormWithAnnotationBasedProviders() {
+		// When - Create form using the new annotation-based approach Note: No explicit
+		// ComboBoxDataProvider needed!
+		final Div form = CEntityFormBuilder.buildForm(ExampleEntity.class, binder);
+		// Then
+		assertNotNull(form, "Form should be created successfully");
+		assertEquals("editor-layout", form.getClassName(),
+			"Form should have correct CSS class");
+		assertTrue(form.getChildren().count() > 0, "Form should contain components");
+		// The form should be created even though the actual Spring services are not
+		// available in this test environment - the form builder handles missing services
+		// gracefully
+	}
 
-        // Then - Form creation is much simpler and less error-prone
-        assertNotNull(form, "Form should be created with minimal code");
-        
-        // The annotation-based approach provides:
-        // 1. Better separation of concerns (data provider config is with the field definition)
-        // 2. Automatic resolution reduces boilerplate code
-        // 3. Type safety at annotation level
-        // 4. Easier maintenance when adding new ComboBox fields
-        // 5. Self-documenting code (you can see the data source right at the field)
-        
-        assertTrue(true, "New approach successfully demonstrates improved developer experience");
-    }
+	@Test
+	@DisplayName("should demonstrate the improved developer experience")
+	void testImprovedDeveloperExperience() {
+		/*
+		 * This test demonstrates how the new annotation-based approach dramatically
+		 * simplifies form creation for developers: OLD APPROACH (complex, error-prone):
+		 * =================================== ComboBoxDataProvider provider = new
+		 * ComboBoxDataProvider() {
+		 * @Override public <T extends CEntityDB> List<T> getItems(Class<T> entityType) {
+		 * if (entityType == PrimaryType.class) { return (List<T>)
+		 * primaryTypeService.list(Pageable.unpaged()); } else if (entityType ==
+		 * SecondaryType.class) { return (List<T>) secondaryTypeService.findAllActive(); }
+		 * else if (entityType == RelatedItem.class) { return (List<T>)
+		 * relatedItemService.list(); } // What if we add more ComboBox fields? More
+		 * if-else blocks! // What if we forget to handle a type? Silent bugs! return
+		 * Collections.emptyList(); } }; Div form =
+		 * CEntityFormBuilder.buildForm(ExampleEntity.class, binder, provider); NEW
+		 * APPROACH (simple, maintainable): ==================================== // Just
+		 * annotations in the entity - no complex provider logic needed!
+		 * @MetaData(dataProviderBean = "primaryTypeService") private PrimaryType
+		 * primaryType;
+		 * @MetaData(dataProviderClass = SecondaryTypeService.class, dataProviderMethod =
+		 * "findAllActive") private SecondaryType secondaryType; // Automatic resolution -
+		 * no annotation needed if following naming convention! private RelatedItem
+		 * relatedItem; // In the view - super simple! Div form =
+		 * CEntityFormBuilder.buildForm(ExampleEntity.class, binder);
+		 */
+		// When - Using the new simplified approach
+		final Div form = CEntityFormBuilder.buildForm(ExampleEntity.class, binder);
+		// Then - Form creation is much simpler and less error-prone
+		assertNotNull(form, "Form should be created with minimal code");
+		// The annotation-based approach provides: 1. Better separation of concerns (data
+		// provider config is with the field definition) 2. Automatic resolution reduces
+		// boilerplate code 3. Type safety at annotation level 4. Easier maintenance when
+		// adding new ComboBox fields 5. Self-documenting code (you can see the data
+		// source right at the field)
+		assertTrue(true,
+			"New approach successfully demonstrates improved developer experience");
+	}
 }
